--- a/styles2/MAINpage.css
+++ b/styles2/MAINpage.css
@@ -257,3 +257,7 @@ color: #FFFFFF;
     margin-left: 850px;
     box-shadow: 10px 0 10px 6px #c0c0c0;
 }
+footer {
+  height: 80px;
+  color: darkgrey;
+}
