--- a/styles2/MAINpage.css
+++ b/styles2/MAINpage.css
@@ -2,6 +2,8 @@
 *{
   margin: 0;
   padding: 0;
+  font-family: 'Manrope', san-serif;
+  box-sizing: border-box;
 }
 li{
 list-style-type: none;
@@ -256,6 +258,22 @@ color: #FFFFFF;
 .menu-show {
     margin-left: 850px;
     box-shadow: 10px 0 10px 6px #c0c0c0;
+}
+.slider{
+  margin: 10px 10px;
+  width: 100%;
+  height: 200px;
+  background-color: darkorchid;
+}
+h2{
+  margin: auto;
+  text-align: left;
+  color: #0C1222;
+}
+.map-block{
+  margin: -200px 10px;
+  width: 100%;
+  height: 200px;
 }
 footer {
   height: 80px;
